Fix source code view
- Spans were getting additional padding, making every token in the source code
  have extra space surrounding either side. Added a new CSS rule to eliminate
  the padding.
- Moved "style" portions of templates into CSS.

--- a/asset/zf-apigility-admin/src/css/main.less
+++ b/asset/zf-apigility-admin/src/css/main.less
@@ -182,3 +182,12 @@ table.ag th.action, table.ag td.action, table.table-striped.ag td.action {
     font-size: 12px;
     line-height: 18px;
 }
+
+.ag-code {
+    overflow:auto;
+    max-height:500px;
+
+    span {
+        padding: 0;
+    }
+}
